Práctica 4 Correo Electrónico/Pasarela/iptables
# Generated by iptables-save v1.4.7 on Wed Mar 22 17:19:13 2017
*nat
:PREROUTING ACCEPT [431:55241]
:POSTROUTING ACCEPT [1043:72452]
:OUTPUT ACCEPT [718:46771]
COMMIT
# Completed on Wed Mar 22 17:19:13 2017
# Generated by iptables-save v1.4.7 on Wed Mar 22 17:19:13 2017
*filter
:INPUT DROP [3:363]
:FORWARD DROP [2:104]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -i eth1 -p icmp -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 8443 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 22 -j ACCEPT
-A INPUT -i eth1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 22 -j LOG --log-prefix "Acceso: "
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 143 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 587 -j ACCEPT
-A FORWARD -i eth1 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -o eth1 -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A FORWARD -i eth1 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -i eth1 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -i eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -i eth1 -p tcp -m tcp --dport 8443 -j ACCEPT
-A FORWARD -o eth1 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -o eth1 -p tcp -m tcp --sport 80 -j ACCEPT
-A FORWARD -o eth1 -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -o eth1 -p tcp -m tcp --sport 8443 -j ACCEPT
-A FORWARD -s 10.110.1.24/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -d 10.110.1.24/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 10.110.1.20/32 -p tcp -m tcp --sport 22 -j ACCEPT
-A FORWARD -d 10.110.1.20/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 53 -j ACCEPT
-A FORWARD -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 23 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 23 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 25 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 25 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 143 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 143 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 993 -j ACCEPT
-A FORWARD -p tcp -m tcp --sport 587 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 587 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 993 -j ACCEPT
COMMIT
# Completed on Wed Mar 22 17:19:13 2017
